Delete now per row updtae

--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -25,6 +25,7 @@
   crossorigin="anonymous" referrerpolicy="no-referrer" />
 <!-- Main Styling -->
 <link rel="stylesheet" type="css" href="/assets/css/styles.css">
+<!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/htmx.org@2.0.0"></script>
