--- a/views/sections/expenses/filter.html
+++ b/views/sections/expenses/filter.html
@@ -30,14 +30,14 @@
     </div>
     <div class="flex flex-row ">
       <div class="flex flex-col w-1/2">
-        <label for="min_price" class="block text-sm font-medium text-gray-700">Min Price</label>
-        <input type="number" id="min_price" name="min_price"
+        <label for="min_amount" class="block text-sm font-medium text-gray-700">Min Amount</label>
+        <input type="number" id="min_amount" name="min_amount"
           class="mt-1 mx-1  p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
           placeholder="e.g., 10">
       </div>
       <div class="flex flex-col  w-1/2">
-        <label for="max_price" class="block text-sm font-medium text-gray-700">Max Price</label>
-        <input type="number" id="max_price" name="max_price"
+        <label for="max_amount" class="block text-sm font-medium text-gray-700">Max Amount</label>
+        <input type="number" id="max_amount" name="max_amount"
           class="mt-1 mx-1 p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
           placeholder="e.g., 50">
       </div>
