--- a/views/sections/importers/table.html
+++ b/views/sections/importers/table.html
@@ -8,7 +8,8 @@
     <button id="applyAll" class="float-right m-2 mb-3 font-medium text-blue-600 hover:text-blue-800">
       Apply all
     </button>
-    <button hx-get="/importers/table" hx-target="#table" class="float-right m-2 mb-3 font-medium text-pink-600 hover:text-pink-800">
+    <button hx-get="/importers/table" hx-target="#table"
+      class="float-right m-2 mb-3 font-medium text-pink-600 hover:text-pink-800">
       Refresh
     </button>
     <table class="min-w-full bg-white border shadow-md rounded-xl border-gray-200">
@@ -18,14 +19,15 @@
           <th class="px-4 py-3 text-left">Shop</th>
           <th class="px-4 py-3 text-left">Product</th>
           <th class="px-4 py-3 text-left">Category</th>
-          <th class="px-4 py-3 text-left">Price</th>
+          <th class="px-4 py-3 text-left">Amount</th>
           <th class="px-4 py-3 text-left">Action</th>
         </tr>
       </thead>
-      <tbody class="text-blue-gray-900">
+      <tbody class="text-blue-gray-900 animate__headShake animate__animated">
         {{ $categories := .Categories }}
         {{range .Expenses}}
-        <tr id="editRow{{.ID}}" class="border-b border-blue-gray-100 bg-blue-100 bg-gray-100 fade-me-out">
+        <tr id="editRow{{.ID}}"
+          class="border-b border-blue-gray-100 bg-blue-100 bg-gray-100 fade-me-out animate__animated">
           <td class="py-0 px-2">
             <input class="bg-gray-50 px-2 rounded-md" type="date" id="date" name="date"
               value='{{ .Date.Format "2006-01-02" }}'>
@@ -63,10 +65,26 @@
             </div>
             <div hx-get="/expenses/{{.ID}}/row" hx-swap="outerHTML" hx-target="#editRow{{.ID}}"
               hx-trigger="click from:#applyAll, click from:#apply-{{.ID}}"> </div>
-            <!-- <button id="cancel" hx-get="/expenses/{{.ID}}/row" hx-swap="outerHTML" hx-target="#editRow{{.ID}}" -->
-            <!--   hx-trigger="click" -->
-            <!--   class="border border-red-300 p-1 h-full w-full font-medium bg-red-200 text-red-500 hover:text-red-800"> -->
-            <!--   <i class='bx bx-x'></i></button> -->
+            <!-- <button -->
+            <!--   class="border border-red-300 p-1 h-full w-full font-medium bg-red-200 text-red-500 hover:text-red-800" -->
+            <!--   hx-swap="innerHTML" hx-delete="/expenses/{{.ID}}" hx-target="#mitoast" _="on htmx:confirm(issueRequest) -->
+            <!--  halt the event -->
+            <!--  call Swal.fire({title: 'Confirm', text:'Delete expense. Are you sure ?'}) -->
+            <!--  if result.isConfirmed toggle .animate__fadeOut on #editRow{{ .ID }} then wait 1s then issueRequest()"> -->
+            <!--   <i class='bx bx-trash'></i> -->
+            <!-- </button> -->
+            <button id="deleteButton{{.ID}}"
+              class="border border-red-300 p-1 h-full w-full font-medium bg-red-200 text-red-500 hover:text-red-800"
+              hx-swap="innerHTML" hx-delete="/expenses/{{.ID}}" hx-target="#mitoast"
+              _="on htmx:confirm(issueRequest)
+             halt the event
+             call Swal.fire({title: 'Confirm', text:'Delete expense. Are you sure ?'})
+             if result.isConfirmed toggle .animate__fadeOut on #editRow{{.ID}} then wait 1s then issueRequest()">
+              <i class='bx bx-trash'></i>
+            </button>
+            <div hx-trigger="deletedExpense-{{.ID}} from:body" hx-get="/empty"
+              hx-target="#editRow{{.ID}}"></div>
+
           </td>
         </tr>
         {{end}}
@@ -82,7 +100,7 @@
     <div class="inline-flex mt-2 xs:mt-0">
       <button hx-get="/importers/table?page_num={{.PrevPage}}" hx-swap="outerHTML" hx-target="#table"
         hx-include="#filters input, #filters select" hx-push-url="true"
-                                                     class="flex items-center justify-center px-4 h-10 text-base font-medium text-white rounded-s {{ if eq .CurrentPage 0 }} bg-gray-500 {{else}} hover:bg-indigo-900 bg-indigo-500 {{end}}"
+        class="flex items-center justify-center px-4 h-10 text-base font-medium text-white rounded-s {{ if eq .CurrentPage 0 }} bg-gray-500 {{else}} hover:bg-indigo-900 bg-indigo-500 {{end}}"
         {{ if eq .CurrentPage 0 }} disabled {{end}}>
         <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
           viewBox="0 0 14 10">
