--- a/views/partials/sidebar.html
+++ b/views/partials/sidebar.html
@@ -33,12 +33,12 @@
         </button>
       </li>
       <li>
-        <button hx-trigger="click,{{ .TelegramTrigger }}" hx-get="/telegram/" hx-swap="innerHTML" hx-target="#contenido"
+        <button hx-trigger="click,{{ .SettingsTrigger }}" hx-get="/settings" hx-swap="innerHTML" hx-target="#contenido" hx-push-url="true"
           class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
           <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400">
-            <i class="bx bxl-telegram" style="color:#1DA0DC"></i>
+            <i class='bx bx-cog'></i>
           </span>
-          <span class="text-sm font-medium" style="color:#1DA0DC">Telegram</span>
+          <span class="text-sm font-medium">Settings</span>
         </button>
       </li>
       <!-- <li> -->
