--- a/views/sections/settings/categories.html
+++ b/views/sections/settings/categories.html
@@ -1,5 +1,5 @@
-<div id="categories" class="mx-5 w-full rounded-lg" hx-get="/categories/table" hx-trigger="reloadCategoriesTable from:body" hx-target="this" hx-swap="outerHTML">
-  <span class="text-xl w-1/3 pt-2 text-gray-700">Categories</span>
+<div id="categories" class="mx-5 w-full rounded-lg" hx-get="/settings/categories/table" hx-trigger="reloadCategoriesTable from:body" hx-target="this" hx-swap="outerHTML">
+  <span class="text-xl block p-2 w-1/3 pt-2 text-gray-700">Categories</span>
   <table class="min-w-full divide-y divide-gray-200 border border-gray-300 rounded-lg">
     <thead class="bg-gray-50">
       <tr>
@@ -14,7 +14,7 @@
             class="mt-1 pl-1 w-full rounded-sm border border-blue-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
         </td>
         <td class="px-6 py-2 w-1/3 whitespace-nowrap text-right text-sm font-medium">
-          <button hx-post="/categories" hx-target="#mitoast" hx-swap="innerHTML" hx-include="#category_name"
+          <button hx-post="/settings/categories" hx-target="#mitoast" hx-swap="innerHTML" hx-include="#category_name"
             class="text-indigo-600 hover:text-indigo-900">Add</button>
         </td>
       </tr>
@@ -26,9 +26,9 @@
         </td>
         {{ if ne $id "unknown" }}
         <td class="px-6 py-2 whitespace-nowrap text-right text-sm font-medium">
-          <button hx-put="/categories/{{ $id }}"  hx-vals='js:{category_name: document.getElementById("categoryEdit{{$id}}").innerHTML }' hx-target="#mitoast" hx-swap="innerHTML"
+          <button hx-put="/settings/categories/{{ $id }}"  hx-vals='js:{category_name: document.getElementById("categoryEdit{{$id}}").innerHTML }' hx-target="#mitoast" hx-swap="innerHTML"
             class="text-indigo-600 hover:text-indigo-900">Edit</button>
-          <button hx-delete="/categories/{{$id}}" hx-target="#mitoast" hx-swap="innerHTML"
+          <button hx-delete="/settings/categories/{{$id}}" hx-target="#mitoast" hx-swap="innerHTML"
             class="text-red-600 hover:text-red-900 ml-4">Delete</button>
         </td>
         {{ else }}
