--- a/views/sections/settings/categories.html
+++ b/views/sections/settings/categories.html
@@ -1,6 +1,6 @@
 <div id="categories" class="mx-5 w-full rounded-lg" hx-get="/settings/categories/table" hx-trigger="reloadCategoriesTable from:body" hx-target="this" hx-swap="outerHTML">
   <span class="text-xl block p-2 w-1/3 pt-2 text-gray-700">Categories</span>
-  <table class="min-w-full divide-y divide-gray-200 border border-gray-300 rounded-lg">
+  <table class="divide-y divide-gray-200 border border-gray-300 rounded-lg">
     <thead class="bg-gray-50">
       <tr>
         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
