--- a/views/sections/settings/index.html
+++ b/views/sections/settings/index.html
@@ -1,4 +1,6 @@
 <div class="p-5 m-0 flex w-full">
-  <div id="categories" hx-get="/settings/categories" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
-  </div>
+    <div id="categories" hx-get="/settings/categories" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
+    </div>
+    <div id="telegram" hx-get="/settings/telegram" hx-trigger="revealed" hx-target="this" hx-swap="outerHTML">
+    </div>
 </div>
