--- a/views/sections/settings/telegram.html
+++ b/views/sections/settings/telegram.html
@@ -1,4 +1,34 @@
-  <div id="telegram" hx-get="/settings/telegram/" hx-trigger="reloadTelegramConfig form:body" hx-target="this" hx-swap="outerHTML">
-    hi
+<div id="telegram" class="mx-5 w-full rounded-lg" hx-get="/settings/telegram"
+  hx-trigger="reloadTelegramConfig form:body" hx-target="this">
+  <span class="text-xl block p-2 w-1/3 pt-2" style="color:#1DA1DE;"><i class='bx bxl-telegram'></i> Telegram</span>
+  <div class="block border border-gray-300 rounded-lg p-3 flex">
+    <div class="w-1/2">
+      <span class="text-md text-gray-800">Bot status:</span>
+      <span class='text-gray-700 bg-gray-100 border border-gray-200 text-md font-medium me-2 px-2.5 py-0.5 rounded'
+        hx-get="/settings/telegram/status" hx-swap="outerHTML" hx-trigger="every 1s" hx-target="this">
+        Unknown
+      </span>
+      <br>
+      <br>
+      <span class="text-md text-gray-800">Allowed users:</span>
+      <span class='text-indigo-700 bg-indigo-200 text-md font-medium me-2 px-2.5 py-0.5 rounded' hx-trigger="every 1s"
+        hx-swap="innerHTML" hx-target="this" hx-post="/telegram/command"
+        hx-vals='{"command": "getAllowedUsers"}'></span>
+      <br>
+      <br>
+      <button class='text-green-700 bg-green-200 text-md font-medium me-2 px-2.5 py-0.5 rounded' hx-trigger="click"
+        hx-swap="innerHTML" hx-target="#mitoast" hx-post="/settings/telegram/command"
+        hx-vals='{"command": "start"}'>Start</button>
+      <button class='text-red-700 bg-red-200 text-md font-medium me-2 px-2.5 py-0.5 rounded' hx-trigger="click"
+        hx-swap="innerHTML" hx-target="#mitoast" hx-post="/settings/telegram/command"
+        hx-vals='{"command": "stop"}'>Stop</button>
+    </div>
+    <div class="w-1/2 text-sm">
+      <strong>Available telegram commands:</strong><br><br>
+        <span  style="color:#1DA1DE;">/categories</span> - Sends you all the categories available.<br>
+        <span  style="color:#1DA1DE;">/summary</span> - Sends summar of last month's expenses.<br>
+        <span  style="color:#1DA1DE;">/ping</span> - Checks bot availability and health.<br>
+        <span  style="color:#1DA1DE;">/help</span> - Displays this menu.
+    </div>
   </div>
-
+</div>
