--- a/views/sections/settings/categories.html
+++ b/views/sections/settings/categories.html
@@ -1,4 +1,4 @@
-<div id="categories" class="mx-5 w-full rounded-lg" hx-get="/settings/categories/table" hx-trigger="reloadCategoriesTable from:body" hx-target="this" hx-swap="outerHTML">
+<div id="categories" class="mx-5 w-full rounded-lg" hx-get="/settings/categories" hx-trigger="reloadCategoriesConfig from:body" hx-target="this" hx-swap="outerHTML">
   <span class="text-xl block p-2 w-1/3 pt-2 text-gray-700">Categories</span>
   <table class="divide-y divide-gray-200 border border-gray-300 rounded-lg">
     <thead class="bg-gray-50">
@@ -21,9 +21,15 @@
       {{ range $id, $name := .Categories }}
       {{ $colors := nameToColor $name }}
       <tr>
+        {{ if ne $id "unknown" }}
         <td class='px-6 py-2 whitespace-nowrap text-sm font-medium text-gray-900'>
           <span contenteditable="true" id="categoryEdit{{$id}}" class='{{index $colors "bg" }} {{index $colors "txt" }} text-sm font-medium me-2 px-2.5 rounded'>{{$name}}</span>
         </td>
+        {{else}}
+        <td class='px-6 py-2 whitespace-nowrap text-sm font-medium text-gray-900'>
+          <span class='{{index $colors "bg" }} {{index $colors "txt" }} text-sm font-medium me-2 px-2.5 rounded'>{{$name}}</span>
+        </td>
+        {{end}}
         {{ if ne $id "unknown" }}
         <td class="px-6 py-2 whitespace-nowrap text-right text-sm font-medium">
           <button hx-put="/settings/categories/{{ $id }}"  hx-vals='js:{category_name: document.getElementById("categoryEdit{{$id}}").innerHTML }' hx-target="#mitoast" hx-swap="innerHTML"
