--- a/views/sections/settings/telegram.html
+++ b/views/sections/settings/telegram.html
@@ -23,12 +23,13 @@
         hx-swap="innerHTML" hx-target="#mitoast" hx-post="/settings/telegram/command"
         hx-vals='{"command": "stop"}'>Stop</button>
     </div>
-    <div class="w-1/2 text-sm">
+    <div class="w-1/2 text-sm text-justify">
       <strong>Available telegram commands:</strong><br><br>
-        <span  style="color:#1DA1DE;">/categories</span> - Sends you all the categories available.<br>
-        <span  style="color:#1DA1DE;">/summary</span> - Sends summar of last month's expenses.<br>
-        <span  style="color:#1DA1DE;">/ping</span> - Checks bot availability and health.<br>
-        <span  style="color:#1DA1DE;">/help</span> - Displays this menu.
+        <span style="color:#1DA1DE;">/categories</span> - Sends you all the categories available.<br>
+        <span style="color:#1DA1DE;">/summary</span> - Sends summar of last month's expenses.<br>
+        <span style="color:#1DA1DE;">/new</span> - Create a new Expense <br>
+        <span style="color:#1DA1DE;">/ping</span> - Checks bot availability and health.<br>
+        <span style="color:#1DA1DE;">/help</span> - Displays this menu.
     </div>
   </div>
 </div>
