--- a/views/sections/settings/categories.html
+++ b/views/sections/settings/categories.html
@@ -1,10 +1,10 @@
 <div id="categories" class="mx-5 w-full rounded-lg" hx-get="/settings/categories" hx-trigger="reloadCategoriesConfig from:body" hx-target="this" hx-swap="outerHTML">
-  <span class="text-xl block p-2 w-1/3 pt-2 text-gray-700">Categories</span>
+  <span class="text-xl block p-2 w-1/3 pt-2 text-orange-700"><i class='bx bx-category-alt' ></i> Categories</span>
   <table class="divide-y divide-gray-200 border border-gray-300 rounded-lg">
     <thead class="bg-gray-50">
       <tr>
         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
-        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
+        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider float-right">Actions</th>
       </tr>
     </thead>
     <tbody id="categories-list" class="bg-white divide-y divide-gray-200">
