--- a/views/sections/settings/rules.html
+++ b/views/sections/settings/rules.html
@@ -15,7 +15,7 @@
         <tr clas="flex">
           <td class='pl-6 py-2 text-sm font-medium text-gray-900'>
             <input type="text" id="rule_pattern" name="rule_pattern" value="" placeholder="Pattern for Shop"
-              class="mt-1 px-1 border border-blue-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
+              class="mt-1 px-1 border border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
           </td>
           <td class="py-0 px-4">
             <select id="category_id" name="category_id"
