--- a/views/sections/settings/categories.html
+++ b/views/sections/settings/categories.html
@@ -11,7 +11,7 @@
       <tr clas="flex">
         <td class='pl-6 py-2 w-2/3 text-sm font-medium text-gray-900'>
           <input type="text" id="category_name" name="category_name" value="" placeholder="New category name"
-            class="mt-1 pl-1 w-full rounded-sm border border-blue-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
+            class="mt-1 pl-1 w-full rounded-sm border border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
         </td>
         <td class="px-6 py-2 w-1/3 whitespace-nowrap text-right text-sm font-medium">
           <button hx-post="/settings/categories" hx-target="#mitoast" hx-swap="innerHTML" hx-include="#category_name"
