--- a/views/sections/expenses/table.html
+++ b/views/sections/expenses/table.html
@@ -25,9 +25,9 @@
           <td class="px-4 py-1">{{.Shop}}</td>
           <td class="px-4 py-1">{{.Product }}</td>
           <td class="px-4 py-1">
-            {{ $colors := nameToColor .Category }}
+            {{ $colors := nameToColor .Category.Name }}
             <span
-              class='{{index $colors "bg" }} {{index $colors "txt" }} text-sm font-medium me-2 px-2.5 py-0.5 rounded'>{{.Category}}</span>
+              class='{{index $colors "bg" }} {{index $colors "txt" }} text-sm font-medium me-2 px-2.5 py-0.5 rounded'>{{.Category.Name}}</span>
           </td>
           <td class="px-4 py-1">${{printf "%.2f" .Amount}}</td>
           <td class="px-4 py-1">
