--- a/views/sections/settings/rules.html
+++ b/views/sections/settings/rules.html
@@ -1,18 +1,18 @@
 <div id="rules" class="mx-5 w-full rounded-lg" hx-get="/settings/rules" hx-trigger="reloadRulesConfig from:body"
   hx-target="this">
   <span class="text-xl block p-2 pt-2 text-indigo-500"><i class='bx bx-ruler'></i> Rules</span>
-  <div class="block border border-gray-300 rounded-lg p-3">
-    <table class="divide-y divide-gray-200 border border-gray-300 rounded-lg w-full">
+  <div class="min-w-[750px] min-h-[200px] border border-gray-300 rounded-lg p-3 flex">
+    <table class="divide-y divide-gray-200 border border-gray-300 rounded-lg p-3 w-full">
       <thead class="bg-gray-50">
         <tr>
-          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Pattern</th>
-          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Category</th>
-          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider float-right">Actions
+          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase ">Pattern</th>
+          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase ">Category</th>
+          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase float-right">Actions
           </th>
         </tr>
       </thead>
-      <tbody id="rules-list" class="bg-white divide-y divide-gray-200">
-        <tr clas="flex">
+      <tbody id="rules-list" class="bg-white divide-y divide-gray-200 w-full">
+        <tr >
           <td class='pl-6 py-2 text-sm font-medium text-gray-900'>
             <input type="text" id="rule_pattern" name="rule_pattern" value="" placeholder="Pattern for Shop"
               class="mt-1 px-1 border border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
