--- a/views/sections/settings/telegram.html
+++ b/views/sections/settings/telegram.html
@@ -1,8 +1,9 @@
 <div id="telegram" class="mx-5 w-full rounded-lg" hx-get="/settings/telegram"
   hx-trigger="reloadTelegramConfig from:body" hx-target="this">
   <span class="text-xl block p-2 w-1/3 pt-2" style="color:#1DA1DE;"><i class='bx bxl-telegram'></i> Telegram</span>
-  <div class="block border border-gray-300 rounded-lg p-3 flex">
-    <div class="w-1/2">
+  <div class="min-w-[750px] min-h-[200px] block border border-gray-300 rounded-lg p-3 ">
+    <div id="telegram-not-table" class=" border border-blue-300 rounded-lg p-3 flex">
+    <div class="w-1/2 ">
       <span class="text-md text-gray-800">Bot status:</span>
       <span class='text-gray-700 bg-gray-100 border border-gray-200 text-md font-medium me-2 px-2.5 py-0.5 rounded'
         hx-get="/settings/telegram/status" hx-swap="outerHTML" hx-trigger="every 1s" hx-target="this">
@@ -23,7 +24,7 @@
         hx-swap="innerHTML" hx-target="#mitoast" hx-post="/settings/telegram/command"
         hx-vals='{"command": "stop"}'>Stop</button>
     </div>
-    <div class="w-1/2 text-sm text-justify">
+    <div class="w-1/2 text-sm text-justify overflwo-x-auto"> 
       Available telegram commands:<br><br>
         <span style="color:#1DA1DE;">/categories</span> - Sends you all the categories available.<br>
         <span style="color:#1DA1DE;">/summary</span> - Sends summar of last month's expenses.<br>
