--- a/views/partials/sidebar.html
+++ b/views/partials/sidebar.html
@@ -17,7 +17,8 @@
           </a>
       </li>
       <li>
-        <button hx-trigger="click,{{ .ExpensesTrigger }}" hx-get="/expenses" hx-push-url="true" hx-swap="innerHTML" hx-target="#contenido"
+        <button hx-trigger="click,{{ .ExpensesTrigger }}" hx-get="/expenses" hx-push-url="true" hx-swap="innerHTML"
+          hx-target="#contenido"
           class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
           <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
               class="bx bx-table"></i></span>
@@ -25,7 +26,8 @@
         </button>
       </li>
       <li>
-        <button hx-trigger="click,{{ .ImporterTrigger }}" hx-get="/importers" hx-swap="innerHTML" hx-target="#contenido" hx-push-url="true"
+        <button hx-trigger="click,{{ .ImporterTrigger }}" hx-get="/importers" hx-swap="innerHTML" hx-target="#contenido"
+          hx-push-url="true"
           class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
           <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400"><i
               class="bx bxs-file-import"></i></span>
@@ -33,7 +35,8 @@
         </button>
       </li>
       <li>
-        <button hx-trigger="click,{{ .SettingsTrigger }}" hx-get="/settings" hx-swap="innerHTML" hx-target="#contenido" hx-push-url="true"
+        <button hx-trigger="click,{{ .SettingsTrigger }}" hx-get="/settings" hx-swap="innerHTML" hx-target="#contenido"
+          hx-push-url="true"
           class="flex flex-row items-center h-12 transform hover:translate-x-2 transition-transform ease-in duration-200 text-gray-500 hover:text-gray-800">
           <span class="inline-flex items-center justify-center h-12 w-12 text-lg text-gray-400">
             <i class='bx bx-cog'></i>
@@ -75,4 +78,15 @@
     </ul>
   </div>
 </div>
+<script>
+  // Function to initialize select2
+  function initializeSelect2() {
+    $('.js-example-basic-multiple').select2({
+      theme: "classic"
+    });
+  }
+  // Initialize select2 after htmx from:body load
+  document.body.addEventListener('htmx:load', function (event) {initializeSelect2();});
+</script>
+
 {{end}}
