--- a/views/sections/expenses/filter.html
+++ b/views/sections/expenses/filter.html
@@ -16,23 +16,31 @@
       <input type="date" id="to-date" name="to-date"
         class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
     </div>
-    <div class="flex flex-col">
-      <label for="categoriesSelect" class="block text-sm font-medium text-gray-700">Category</label>
-      <select id="categoriesSelect" name="categoriesSelect"
-        class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-      </select>
+    <div class="flex flex-row">
+      <div class="flex flex-col w-1/2 mx-1">
+        <label for="userSelect" class="block text-sm font-medium text-gray-700">Users</label>
+        <select id="userSelect" name="userSelect"
+          class="mt-1 mx-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+        </select>
+      </div>
+      <div class="flex flex-col w-1/2 mx-1">
+        <label for="categoriesSelect" class="block text-sm font-medium text-gray-700">Category</label>
+        <select id="categoriesSelect" name="categoriesSelect"
+          class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+        </select>
+      </div>
     </div>
     <div class="flex flex-col">
       <label for="shop" class="block text-sm font-medium text-gray-700">Shop</label>
       <input type="text" id="shop" name="shop"
-        class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+        class="mt-1 mx-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
         placeholder="Shop name">
     </div>
-    <div class="flex flex-row ">
+    <div class="flex flex-row">
       <div class="flex flex-col w-1/2">
         <label for="min_amount" class="block text-sm font-medium text-gray-700">Min Amount</label>
         <input type="number" id="min_amount" name="min_amount"
-          class="mt-1 mx-1  p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+          class="mt-1 mx-1 p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
           placeholder="e.g., 10">
       </div>
       <div class="flex flex-col  w-1/2">
@@ -45,20 +53,23 @@
   </div>
   <div class="mt-4">
     <button type="button" hx-trigger="click" hx-url-push="true" hx-get="/expenses/table" hx-target="#table"
-      hx-include="#filters input, #filters select" hx-vals='js:{categories: getSelectedValues()}'
+      hx-include="#filters input, #filters select"
+      hx-vals='js:{categories: getSelectedCategories(), users: getFilteredUsers()}'
       class="inline-flex items-center px-4 py-2 bg-indigo-500 border border-transparent rounded-md shadow-sm text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
       Apply Filters
     </button>
   </div>
 </div>
-<script>
-  var selectedValues = [];
-  // {{range $id, $name:= .Categories}} 
-  // {{ if ne $id "unknown"}}
-  selectedValues.push('{{$id}}')
-  // {{end}}
-  // {{end}}
 
+
+<script>
+  // Categories
+  var selectedCategories = [];
+  // {{range $id, $name:= .Categories}} 
+  // {{ if ne $name "unknown"}}
+  selectedCategories.push('{{$id}}')
+  // {{end}}
+  // {{end}}
   // Initialize the Multi Select dropdown from multiselect.js
   new MultiSelect('#categoriesSelect', {
     data: [
@@ -90,19 +101,67 @@
     },
     onSelect: function (value, text, element) {
       // Add selected value to the array
-      if (!selectedValues.includes(value)) {
-        selectedValues.push(value);
+      if (!selectedCategories.includes(value)) {
+
+        selectedCategories.push(value);
       }
       console.log('Selected:', value, text, element);
     },
     onUnselect: function (value, text, element) {
       // Remove unselected value from the array
-      selectedValues = selectedValues.filter(item => item !== value);
+      selectedCategories = selectedCategories.filter(item => item !== value);
       console.log('Unselected:', value, text, element);
     }
   });
-  function getSelectedValues() {
-    return selectedValues.join(',');
+  function getSelectedCategories() {
+    return selectedCategories.join(',');
   }
-
+</script>
+<script>
+  // Users
+  var filteredUsers = [];
+  filteredUsers.push('{{.NoUserID}}')
+  // {{range $id, $value:= .Users}} 
+  filteredUsers.push('{{$id}}')
+  // {{end}}
+  // Initialize the Multi Select dropdown from multiselect.js
+  new MultiSelect('#userSelect', {
+    data: [
+      // This can be commented on js but rendered anyway
+      // {{range $id, $value:= .Users}} 
+      {
+        value: '{{$id}}',
+        text: '{{$value.DisplayName}}',
+        selected: true
+      },
+      // {{end}}
+      {
+        value: '{{.NoUderID}}',
+        text: 'No User',
+        selected: true
+      },
+    ],
+    placeholder: 'Select an option',
+    search: true,
+    selectAll: true,
+    listAll: false,
+    max: 0,
+    onChange: function (value, text, element) {
+      console.log('Change:', value, text, element);
+    },
+    onSelect: function (value, text, element) {
+      // Add selected value to the array
+      if (!filteredUsers.includes(value)) {
+        filteredUsers.push(value);
+      }
+      console.log('Selected:', value, text, element);
+    },
+    onUnselect: function (value, text, element) {
+      // Remove unselected value from the array
+      filteredUsers = filteredUsers.filter(item => item !== value);
+    }
+  });
+  function getFilteredUsers() {
+    return filteredUsers.join(',');
+  }
 </script>
