--- a/views/sections/expenses/rowAdd.html
+++ b/views/sections/expenses/rowAdd.html
@@ -22,17 +22,84 @@
     </select>
   </td>
   <td class="p-0 px-4">
+
+    <select id="usersAdd" style="width: 75%"
+      class="js-example-basic-multiple bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 border-blue-500 block w-full"
+      name="users[]" multiple="multiple">
+      {{ range $id, $user := .Users }}
+      <option value="{{$id}}">{{$user.DisplayName}}</option>
+      {{end}}
+    </select>
+    <script>
+      $(document).ready(function () {
+        $('#usersAdd').select2({
+          theme: "classic"
+        });
+      });
+    </script>
+  </td>
+  <td class="p-0 px-4">
     $ <input class="w-20 px-1 border border-gray-300 rounded-md" type="number" min="0" id="amount" name="amount"
       value=''>
   </td>
-  <td class="py-0 px-0 pb-0 mb-0 h-full flex float justify-center items-center">
+  <td class="p-2 mb-0 h-full flex float justify-center items-center">
     <button id="apply" hx-trigger="click"
       class="border border-green-300 p-1 w-full font-medium bg-green-200 text-green-500 hover:text-green-800"><i
         class='bx bx-check'></i> </button>
     <div hx-post="/expenses" hx-swap="innerHTML" hx-target="#mitoast" hx-include="#addRow input, #addRow select"
+      hx-vals="js:{users: $('#usersAdd').select2('data').map(function(item){return item.id}).join(',')}"
       hx-trigger="click from:#apply"> </div>
     <button id="cancel" hx-get="/empty" hx-target="#addRow" hx-swap="innerHTML"
       class="border border-red-300 p-1 h-full w-full font-medium bg-red-200 text-red-500 hover:text-red-800"><i
         class='bx bx-x'></i></button>
   </td>
 </tr>
+<script>
+  // Users
+  var selectedUsers = [];
+  selectedUsers.push('{{.NoUserID}}')
+  // {{range .Expense.Users}} 
+  selectedUsers.push('{{.ID}}')
+  // {{end}}
+  console.log(selectedUsers)
+  // Initialize the Multi Select dropdown from multiselect.js
+  new MultiSelect('#userSelect', {
+    data: [
+      // This can be commented on js but rendered anyway
+      // {{range .Expense.Users}} 
+      {
+        value: '{{.ID}}',
+        text: '{{.DisplayName}}',
+        selected: true
+      },
+      // {{end}}
+      {
+        value: '{{.NoUderID}}',
+        text: 'No User',
+        selected: true
+      },
+    ],
+    placeholder: 'Select an option',
+    search: true,
+    selectAll: true,
+    listAll: false,
+    max: 0,
+    onChange: function (value, text, element) {
+      console.log('Change:', value, text, element);
+    },
+    onSelect: function (value, text, element) {
+      // Add selected value to the array
+      if (!selectedUsers.includes(value)) {
+        selectedUsers.push(value);
+      }
+      console.log('Selected:', value, text, element);
+    },
+    onUnselect: function (value, text, element) {
+      // Remove unselected value from the array
+      selectedUsers = selectedUsers.filter(item => item !== value);
+    }
+  });
+  function getSelectedUsers() {
+    return selectedUsers.join(',');
+  }
+</script>
