--- a/views/sections/importers/n26.html
+++ b/views/sections/importers/n26.html
@@ -5,6 +5,7 @@
       <img id="spinner" class="htmx-indicator w-1/3 h-10" src="/assets/img/loader.svg" />
       <button class="text-md w-1/3 text-right text-blue-600 hover:text-blue-800"
         hx-include="#n26csv,#spacesTransactions,#externalTransactions,#useRules" hx-encoding='multipart/form-data'
+        hx-vals="js:{users: $('#usersImport').select2('data').map(function(item){return item.id}).join(',')}"
         hx-post='/importers/n26' hx-target="#mitoast" hx-indicator="#spinner"> Import </button>
     </div>
     <div class="flex items-center justify-center py-5">
@@ -39,7 +40,30 @@
       <input id="useRules" name="useRules" type="checkbox" value="checked"
         class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
       <label for="useRules" class="ms-2  text-sm font-medium text-gray-900 dark:text-gray-300">
-        User <strong class="text-indigo-500">Rules</strong> to automatically set a category. Go to <a href="/settings">/settings</a> to create a new rule.
+        User <strong class="text-indigo-500">Rules</strong> to automatically set a category. Go to <a class="text-blue-600" href="/settings">/settings</a> to create a new rule.
+    </div>
+    <br>
+    <div class="flex">
+      <span class="ms-2 mt-2 text-sm font-medium text-gray-900 dark:text-gray-300 w-1/2">
+        <span class="text-indigo-500">
+          <i class='bx bx-user'></i>
+        </span>
+        Import all transactions with users:
+      </span>
+      <select id="usersImport"
+        class="js-example-basic-multiple w-1/2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 border-blue-500 block w-full"
+        name="users[]" multiple="multiple">
+        {{ range $id, $user := .Users }}
+        <option value="{{$id}}">{{$user.DisplayName}}</option>
+        {{end}}
+      </select>
+      <script>
+        $(document).ready(function () {
+          $('#usersImport').select2({
+            theme: "classic"
+          });
+        });
+      </script>
     </div>
   </div>
   <br>
