--- a/views/sections/importers/table.html
+++ b/views/sections/importers/table.html
@@ -1,4 +1,4 @@
-<div id="table" hx-get="/importers/table" hx-trigger="reloadImportTable from:body" hx-target="this" hx-swap="outerHTML">
+<div id="table" hx-get="/importers/table" hx-trigger="reloadImportTable from:body" hx-swap="outerHTML">
   <div class="overflow-x-auto">
     <span class="ml-2 text-xl text-gray-700">{{ .ExpensesCount }} Uncatalogged expenses</span>
     <br>
@@ -6,12 +6,13 @@
       a
       category.</span>
     <button id="applyAll" class="float-right m-2 mb-3 font-medium text-blue-600 hover:text-blue-800">
-      Apply all
+      Apply visible
     </button>
-    <button hx-get="/importers/table" hx-target="#table"
-      class="float-right m-2 mb-3 font-medium text-pink-600 hover:text-pink-800">
-      Refresh
-    </button>
+    <!-- This is behaving really weird -->
+    <!-- <button hx-get="/importers/table" hx-target="#table" hx-swap="outerHTML" hx-trigger="click" -->
+    <!--   class="float-right m-2 mb-3 font-medium text-pink-600 hover:text-pink-800"> -->
+    <!--   Refresh -->
+    <!-- </button> -->
     <table class="min-w-full bg-white border shadow-md rounded-xl border-gray-200">
       <thead class="rounded-full">
         <tr class="bg-slate-100 text-gray-700 rounded-lg ">
@@ -19,13 +20,16 @@
           <th class="px-4 py-3 text-left">Shop</th>
           <th class="px-4 py-3 text-left">Product</th>
           <th class="px-4 py-3 text-left">Category</th>
+          <th class="px-4 py-3 text-left">Users</th>
           <th class="px-4 py-3 text-left">Amount</th>
           <th class="px-4 py-3 text-left">Action</th>
         </tr>
       </thead>
       <tbody class="text-blue-gray-900 animate__headShake animate__animated">
         {{ $categories := .Categories }}
+        {{ $allUsers := .Users}}
         {{range .Expenses}}
+        {{ $expenseUsers := .Users}}
         <tr id="editRow{{.ID}}"
           class="border-b border-blue-gray-100 bg-blue-100 bg-gray-100 fade-me-out animate__animated">
           <td class="py-0 px-2">
@@ -51,20 +55,28 @@
               {{end}}
             </select>
           </td>
+          <td class="py-1 px-4">
+            <select id="usersImport{{.ID}}" style="width: 75%"
+              class="js-example-basic-multiple bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 border-blue-500 block w-full"
+              name="users[]" multiple="multiple">
+              {{ range $id, $user := $allUsers }}
+              <option value="{{$id}}" {{ if userInMap $expenseUsers $id}}selected{{end}}>{{$user.DisplayName}}</option>
+              {{end}}
+            </select>
+          </td>
           <td class="p-0 px-4">
             $ <input class="w-24 px-1 border border-gray-300 rounded-md" type="number" min="0" id="amount" name="amount"
               value='{{printf "%.2f" .Amount}}'>
           </td>
-          <td class="py-0 px-0 pb-0 mb-0 h-full flex float justify-center items-center">
-            <button id="apply-{{.ID}}" hx-trigger="click"
-              class="border border-green-300 p-1 w-full font-medium bg-green-200 text-green-500 hover:text-green-800">
-              <i class='bx bx-check'></i> </button>
-            <div hx-put="/expenses/{{.ID}}" hx-swap="innerHTML" hx-target="#mitoast"
+          <td class="p-2 mb-0 h-full flex float justify-center items-center">
+            <button hx-put="/expenses/{{.ID}}" hx-swap="innerHTML" hx-target="#mitoast"
               hx-include="#editRow{{.ID}} input, #editRow{{.ID}} select"
-              hx-trigger="click from:#applyAll, click from:#apply-{{.ID}}">
-            </div>
+              hx-vals="js:{users: $('#usersImport{{.ID}}').select2('data').map(function(item){return item.id}).join(',')}"
+              hx-trigger="click, click from:#applyAll"
+              class="border border-green-300 p-1 w-full font-medium bg-green-200 text-green-500 hover:text-green-800"><i
+                class='bx bx-check'></i> </button>
             <div hx-get="/expenses/{{.ID}}/row" hx-swap="outerHTML" hx-target="#editRow{{.ID}}"
-              hx-trigger="click from:#applyAll, click from:#apply-{{.ID}}"> </div>
+              hx-trigger="reloadRow-{{.ID}} from:body"> </div>
             <!-- <button -->
             <!--   class="border border-red-300 p-1 h-full w-full font-medium bg-red-200 text-red-500 hover:text-red-800" -->
             <!--   hx-swap="innerHTML" hx-delete="/expenses/{{.ID}}" hx-target="#mitoast" _="on htmx:confirm(issueRequest) -->
@@ -75,16 +87,13 @@
             <!-- </button> -->
             <button id="deleteButton{{.ID}}"
               class="border border-red-300 p-1 h-full w-full font-medium bg-red-200 text-red-500 hover:text-red-800"
-              hx-swap="innerHTML" hx-delete="/expenses/{{.ID}}" hx-target="#mitoast"
-              _="on htmx:confirm(issueRequest)
+              hx-swap="innerHTML" hx-delete="/expenses/{{.ID}}" hx-target="#mitoast" _="on htmx:confirm(issueRequest)
              halt the event
              call Swal.fire({title: 'Confirm', text:'Delete expense. Are you sure ?'})
              if result.isConfirmed toggle .animate__fadeOut on #editRow{{.ID}} then wait 1s then issueRequest()">
               <i class='bx bx-trash'></i>
             </button>
-            <div hx-trigger="deletedExpense-{{.ID}} from:body" hx-get="/empty"
-              hx-target="#editRow{{.ID}}"></div>
-
+            <div hx-trigger="deletedExpense-{{.ID}} from:body" hx-get="/empty" hx-target="#editRow{{.ID}}"></div>
           </td>
         </tr>
         {{end}}
@@ -98,8 +107,7 @@
         class="font-semibold text-gray-900 dark:text-white">{{.PageSize}}</span> Entries)
     </span>
     <div class="inline-flex mt-2 xs:mt-0">
-      <button hx-get="/importers/table?page_num={{.PrevPage}}" hx-swap="outerHTML" hx-target="#table"
-        hx-include="#filters input, #filters select" hx-push-url="true"
+      <button hx-get="/importers/table?page_num={{.PrevPage}}" hx-swap="outerHTML" hx-target="#table" hx-push-url="true"
         class="flex items-center justify-center px-4 h-10 text-base font-medium text-white rounded-s {{ if eq .CurrentPage 0 }} bg-gray-500 {{else}} hover:bg-indigo-900 bg-indigo-500 {{end}}"
         {{ if eq .CurrentPage 0 }} disabled {{end}}>
         <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -110,7 +118,7 @@
         Prev
       </button>
       <button hx-get="/importers/table?page_num={{ .NextPage }}" hx-swap="outerHTML" hx-target="#table"
-        hx-include="#filters input, #filters select" hx-push-url="true"
+        hx-push-url="true"
         class="flex items-center justify-center px-4 h-10 text-base font-medium text-white border-0 border-s border-gray-700 rounded-e {{ if eq .CurrentPage .TotalPages }} bg-gray-500 {{else}} hover:bg-indigo-900 bg-indigo-500 {{end}}"
         {{ if eq .CurrentPage .TotalPages }} disabled {{end}}>
         Next
