--- a/views/sections/expenses/filter.html
+++ b/views/sections/expenses/filter.html
@@ -18,8 +18,8 @@
     </div>
     <div class="flex flex-row">
       <div class="flex flex-col w-1/2 mx-1">
-        <label for="userSelect" class="block text-sm font-medium text-gray-700">Users</label>
-        <select id="userSelect" name="userSelect"
+        <label for="usersSelect" class="block text-sm font-medium text-gray-700">Users</label>
+        <select id="usersSelect" name="usersSelect"
           class="mt-1 mx-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
         </select>
       </div>
@@ -125,7 +125,7 @@
   // {{end}}
   filteredUsers.push('{{.NoUserID}}')
   // Initialize the Multi Select dropdown from multiselect.js
-  new MultiSelect('#userSelect', {
+  new MultiSelect('#usersSelect', {
     data: [
       // This can be commented on js but rendered anyway
       // {{range $id, $value:= .Users}} 
