--- a/views/sections/expenses/table.html
+++ b/views/sections/expenses/table.html
@@ -67,7 +67,7 @@
     </span>
     <div class="inline-flex mt-2 xs:mt-0">
       <button hx-get="/expenses/table?page_num={{ .PrevPage }}" hx-swap="outerHTML" hx-target="#table"
-        hx-include="" hx-push-url="true"
+        hx-include="#filters input"
         hx-vals='js:{categories: getSelectedCategories(), users: getFilteredUsers()}'
         class="flex items-center justify-center px-4 h-10 text-base font-medium text-white rounded-s {{ if eq .CurrentPage 0 }} bg-gray-500 {{else}} hover:bg-indigo-900 bg-indigo-500 {{end}}"
         {{ if eq .CurrentPage 0 }} disabled {{end}}>
@@ -79,7 +79,7 @@
         Prev
       </button>
       <button hx-get="/expenses/table?page_num={{ .NextPage }}" hx-swap="outerHTML" hx-target="#table"
-        hx-include="" hx-push-url="true"
+        hx-include="#filters input"
         hx-vals='js:{categories: getSelectedCategories(), users: getFilteredUsers()}'
         class="flex items-center justify-center px-4 h-10 text-base font-medium text-white border-0 border-s border-gray-700 rounded-e {{ if eq .CurrentPage .TotalPages }} bg-gray-500 {{else}} hover:bg-indigo-900 bg-indigo-500 {{end}}"
         {{ if eq .CurrentPage .TotalPages }} disabled {{end}}>
