--- a/views/sections/settings/rules.html
+++ b/views/sections/settings/rules.html
@@ -1,6 +1,6 @@
 <div id="rules" class="mx-5 w-full rounded-lg" hx-get="/settings/rules" hx-trigger="reloadRulesConfig from:body"
   hx-target="this">
-  <span class="text-xl block p-2 pt-2 text-indigo-500"><i class='bx bx-ruler'></i> Rules</span>
+  <span class="text-xl block p-2 pt-2 text-purple-500"><i class='bx bx-ruler'></i> Rules</span>
   <div class="min-w-[750px] min-h-[200px] border border-gray-300 rounded-lg p-3 flex">
     <table class="divide-y divide-gray-200 border border-gray-300 rounded-lg p-3 w-full">
       <thead class="bg-gray-50">
